; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_bisect--helper.c_get_terms.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_bisect--helper.c_get_terms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.bisect_terms = type { i8*, i8* }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bisect_terms*)* @get_terms to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_terms(%struct.bisect_terms* %0) #0 {
  %2 = alloca %struct.bisect_terms*, align 8
  %3 = alloca %struct.strbuf, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.bisect_terms* %0, %struct.bisect_terms** %2, align 8
  %6 = bitcast %struct.strbuf* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  store i32* null, i32** %4, align 8
  store i32 0, i32* %5, align 4
  %7 = call i32 (...) @git_path_bisect_terms()
  %8 = call i32* @fopen(i32 %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 -1, i32* %5, align 4
  br label %25

12:                                               ; preds = %1
  %13 = load %struct.bisect_terms*, %struct.bisect_terms** %2, align 8
  %14 = call i32 @free_terms(%struct.bisect_terms* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @strbuf_getline_lf(%struct.strbuf* %3, i32* %15)
  %17 = call i8* @strbuf_detach(%struct.strbuf* %3, i32* null)
  %18 = load %struct.bisect_terms*, %struct.bisect_terms** %2, align 8
  %19 = getelementptr inbounds %struct.bisect_terms, %struct.bisect_terms* %18, i32 0, i32 1
  store i8* %17, i8** %19, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @strbuf_getline_lf(%struct.strbuf* %3, i32* %20)
  %22 = call i8* @strbuf_detach(%struct.strbuf* %3, i32* null)
  %23 = load %struct.bisect_terms*, %struct.bisect_terms** %2, align 8
  %24 = getelementptr inbounds %struct.bisect_terms, %struct.bisect_terms* %23, i32 0, i32 0
  store i8* %22, i8** %24, align 8
  br label %25

25:                                               ; preds = %12, %11
  %26 = load i32*, i32** %4, align 8
  %27 = icmp ne i32* %26, null
  br i1 %27, label %28, label %31

28:                                               ; preds = %25
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @fclose(i32* %29)
  br label %31

31:                                               ; preds = %28, %25
  %32 = call i32 @strbuf_release(%struct.strbuf* %3)
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32* @fopen(i32, i8*) #2

declare dso_local i32 @git_path_bisect_terms(...) #2

declare dso_local i32 @free_terms(%struct.bisect_terms*) #2

declare dso_local i32 @strbuf_getline_lf(%struct.strbuf*, i32*) #2

declare dso_local i8* @strbuf_detach(%struct.strbuf*, i32*) #2

declare dso_local i32 @fclose(i32*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
